--- a/src/server_admin/Source/public/css/style/css/css.css
+++ b/src/server_admin/Source/public/css/style/css/css.css
@@ -2215,7 +2215,7 @@ color:white;
 
 .name_job_detail_job {
     position: absolute;
-    width: 317px;
+    width: 500px;
     height: 36px;
     left: 295px;
     top: 67px;
@@ -2234,7 +2234,7 @@ color:white;
 
 .name_company_detail_job {
     position: absolute;
-    width: 148px;
+    width: 500px;
     height: 36px;
     left: 295px;
     top: 115px;
@@ -2255,16 +2255,15 @@ color:white;
 
     position: absolute;
     left: 295px;
-    top: 170px;
+    top: 237px;
 
 }
 
 .deadline_submit_record_detail_job {
     position: absolute;
-    width: 230px;
     height: 27px;
     left: 321px;
-    top: 163px;
+    top: 230px;
 
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -4459,7 +4458,16 @@ color:#2EAC66;
     left: 499px;
     top: 71px;
 }
+#rectangle_candidate_remove{
+    position: absolute;
+width: 609px;
+height: 188px;
+left: 831px;
+top: 346px;
 
+background: #FCECEB;
+border-radius: 10px;
+}
 #rectangle_candidate_new{
     position: absolute;
 width: 609px;
@@ -4596,7 +4604,6 @@ top: 200px;
 
 .date_post_news_detail_job {
     position: absolute;
-    width: 230px;
     height: 27px;
     left: 321px;
     top: 195px;
@@ -5298,6 +5305,22 @@ line-height: 27px;
 
 color: #000000;
 }
+#status_recruitment{
+    position: absolute;
+height: 27px;
+left: 295px;
+top: 160px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #000000;
+}
 #date_submit_profile_candidate_recruit{
     position: absolute;
     height: 27px;
@@ -5583,7 +5606,6 @@ color: #3D3D3D;
 
 #text_news_approved {
     position: absolute;
-    width: 211px;
     height: 34px;
     left: 33px;
     top: 99px;
