--- a/src/server_admin/Source/views/content_admin/detail_news.hbs
+++ b/src/server_admin/Source/views/content_admin/detail_news.hbs
@@ -1,15 +1,28 @@
 <div class="rectangle_content_detail_news_home_recruit">
     <div class="header_company_detail_job_recruit">
-        <img src="/css/style/image/logo_company.svg" alt="logo_company_recruit" class="logo_company_detail_job_recruit">
-        <div class="name_job_detail_job">Front-End Web Developer</div>
-        <div class="name_company_detail_job">VNG Games</div>
+        <img src="{{news.avatar}}" alt="logo_company_recruit" class="logo_company_detail_job_recruit">
+        <div class="name_job_detail_job">{{news.title}}</div>
+        <div class="name_company_detail_job" onclick="window.location.href='http://localhost:3035/admin/manage_account/detail_account?id={{news.belong_employer}}&&type=employer'">{{news.nameEmployer}}</div>
         <img src="/css/style/image/ic_time.svg" alt="ic_time" class="ic_time_detail_job">
-        <div class="deadline_submit_record_detail_job">Hạn nộp hồ sơ: 12-12-2022 </div>
+        <div class="deadline_submit_record_detail_job">Hạn nộp hồ sơ: {{news.due_date}} </div>
         <img src="/css/style/image/ic_calendar.svg" alt="ic_calendar" class="ic_calendar_detail_job">
-        <div class="date_post_news_detail_job">Ngày đăng tin: 5-11-2022 </div>
+        <div class="date_post_news_detail_job">Ngày đăng tin: {{news.creation_date}} </div>
+        <div id="status_recruitment">Trạng thái: {{news.state}}</div>
 
-        <button type="button" class="approve_news_recruit_admin">Duyệt</button>
-        <button type="button" class="delete_news_recruit_admin">Xóa</button>
+        {{#if data.isApproved}}
+        <button type="button" class="btn_accept_candidate" id="locked_account">Khóa</button>
+        <button type="button" class="btn_reject_candidate" id="remove_account">Xóa</button>
+        {{/if}}
+        {{#if data.isPending}}
+        <button type="button" class="btn_accept_candidate" id="locked_account">Duyệt</button>
+        <button type="button" class="btn_reject_candidate" id="remove_account">Xóa</button>
+        {{/if}}
+        {{#if data.isLocked}}
+        <button type="button" class="btn_accept_candidate" id="locked_account">Mở khóa</button>
+        <button type="button" class="btn_reject_candidate" id="remove_account">Xóa</button>
+        {{/if}}
+ 
+
 
     </div>
     <div id="rectangle_require_recruit">
@@ -18,78 +31,64 @@
             <div id="text_general_information_detail_job">Thông tin chung</div>
             <div class="circle_icon" id="circle_icon_salary_detail_job"></div>
             <div id="text_salary_detail_job">Mức lương</div>
-            <div id="value_salary_detail_job">10-12 triệu</div>
+            <div id="value_salary_detail_job">{{news.min_salary}}-{{news.max_salary}} triệu</div>
             <img src="/css/style/image/ic_cash.svg" alt="ic_cash" id="ic_salary_detail_job">
 
             <div class="circle_icon" id="circle_icon_persons_detail_job"></div>
             <div id="text_number_person_detail_job">Số lượng</div>
-            <div id="value_number_person_detail_job">10 người</div>
+            <div id="value_number_person_detail_job">{{news.number_of_candidates}} người</div>
             <img src="/css/style/image/ic_persons.svg" alt="ic_person" id="ic_persons_detail_job">
 
             <div class="circle_icon" id="circle_icon_method_work_detail_job"></div>
             <div id="text_method_work_detail_job">Hình thức làm việc</div>
-            <div id="value_method_work_detail_job">Fulltime</div>
+            <div id="value_method_work_detail_job">{{news.working_form}}</div>
             <img src="/css/style/image/ic_bag.svg" alt="ic_method_work" id="ic_method_work_detail_job">
             <div class="circle_icon" id="circle_icon_rank_detail_job"></div>
-            <div id="text_rank_detail_job">Cấp bậc</div>
-            <div id="value_rank_detail_job">Nhân viên</div>
-            <img src="/css/style/image/ic_rank.svg" alt="ic_rank" id="ic_rank_detail_job">
+            <div id="text_rank_detail_job">Kinh nghiệm</div>
+            <div id="value_rank_detail_job">{{news.experience}}</div>
+            <img src="/css/style/image/ic_experience.svg" alt="ic_rank" id="ic_rank_detail_job">
             <div class="circle_icon" id="circle_icon_gender_detail_job"></div>
             <div id="text_gender_detail_job">Giới tính</div>
-            <div id="value_gender_detail_job">Không yêu cầu</div>
+            <div id="value_gender_detail_job">{{news.gender}}</div>
             <img src="/css/style/image/ic_gender.svg" alt="ic_gender" id="ic_gender_detail_job">
-            <div class="circle_icon" id="circle_icon_experience_detail_job"></div>
-            <div id="text_experience_detail_job">Kinh nghiệm</div>
-            <div id="value_experience_detail_job">1 năm</div>
-            <img src="/css/style/image/ic_experience.svg" alt="ic_experience" id="ic_experience_detail_job">
-
+    
             <div id="text_adress_work_detail_job">Địa điểm làm việc</div>
-            <div id="value_adress_work_detail_job">KTX khu A, phường Linh Trung,Thành phố Thủ Đức, Thành phố
-                Hồ Chí Minh
+            <div id="value_adress_work_detail_job">{{news.address}}
             </div>
         </div>
         <div id="rectangle_share_recruit_detail_job">
             <div id="text_share_recuit_detail_job">Chia sẻ tin tuyển dụng</div>
             <div id="text_copy_link_detail_job">Sao chép đường dẫn</div>
-            <input type="text" value="file:///D:/Nhap%20mon%20CNPM/DO%20AN/detail_job_candidate.html" disabled
+            <input type="text" value="http://localhost:3035/admin/manage_news/detail_news?id={{news.id}}" 
                 name="link_detail_job" id="link_detail_job">
 
-            <div id="circle_copy_link_detail_job">
-                <img src="/css/style/image/ic_copy.svg" alt="ic_copy" id="ic_copy_link_detail_job">
+            <div id="circle_copy_link_detail_job" onclick="share_link()">
+                <img src="/css/style/image/ic_copy.svg" alt="ic_copy" id="ic_copy_link_detail_job" onclick="share_link()">
             </div>
         </div>
 
 
         <div id="text_describe_job_detail_job">Mô tả công việc</div>
         <pre id="value_describe_job_detail_job">
-                    - Lập trình phần frontend bằng JavaScript/TypeScript sử dụng thư viện VueJS, GraphQL 
-                    - Thiết kế, sửa đổi giao diện người dùng theo yêu cầu khách hàng
-                    - Sửa lỗi, viết unit test, cải tiến code nếu cần
-                    - Hỗ trợ, phối hợp với các thành viên trong nhóm trong các công việc liên quan đến VueJS
-                    - Thực hiện các nhiệm vụ do trưởng nhóm giao
-                    - Địa điểm làm việc: Cầu Giấy, Hà Nội
-                    - Hình thức làm việc: Fulltime T2-T7 hàng tuần
+                   {{news.description}}
                 </pre>
         <div id="text_require_candidate_detail_job">Yêu cầu ứng viên</div>
         <pre id="value_require_candidate_detail_job">
-                    - Thành thạo HTML/CSS, Javascript (ES6, ES7)
-                    - Có kinh nghiệm làm việc với Typescript
-                    - Có kinh nghiệm làm việc thực tế một trong các framework của Javascript như Vuejs, Reactjs, Angular (ưu tiên Vuejs)
-                    - Đã làm việc với Restful, Graphql
-                    - Sử dụng thành thạo Git
-                    - Tối thiểu 6 tháng kinh nghiệm
+                    {{news.requirements}}
                 </pre>
         <div id="text_benefit_detail_job">Quyền lợi</div>
         <pre id="value_benefit_detail_job">
-                    - Mức lương: $500 - $1,000 Gross
-                    - Đóng BHXH, BHYT, BHTN, thưởng tháng 13, thưởng Project,...
-                    - Môi trường năng động, chuyên nghiệp có nhiều cơ hội thăng tiến
-                    - Cung cấp trang thiết bị đầy đủ để phục vụ công việc
-                    - Được đào tạo về kiến thức, kỹ năng phục vụ công việc
-                    - Cơ hội học hỏi những công nghệ khác
-                    - Được tham gia các hoạt động, chương trình, dự án, sự kiện của công ty 
+                  {{news.benefits}}
                 </pre>
 
     </div>
 
 </div>
+<script>
+     function share_link()
+     {
+        var link=document.getElementById('link_detail_job');
+        link.select();
+        navigator.clipboard.writeText(link.value);
+     }
+</script>
