--- a/src/server_candidate/Source/views/candidate/content_manage_record.hbs
+++ b/src/server_candidate/Source/views/candidate/content_manage_record.hbs
@@ -1,62 +1,136 @@
 <div class="rectangle_mid_application_management_candidate">
-            <div class="rectangle_content_application_management_candidate">
-                <div id="text_application_management_candidate">Quản lý hồ sơ ứng tuyển</div>
-                <div id="side_left_application_management_candidate">
-                    <a type="button" id="btn_all_application_management_candidate" href="manage_record/all">Tất cả</a>
-                    <a type="button" id="btn_pending_application_management_candidate" href="manage_record/waiting">Đang chờ duyệt</a>
-                    <a type="button" id="btn_selected_application_management_candidate" href="manage_record/selected" >Đã được chọn</a>
-                    <a type="button" id="btn_not_suitable_application_management_candidate" href="manage_record/not_suitable">Không phù hợp</a>
+    <div class="rectangle_content_application_management_candidate">
+        <div id="text_application_management_candidate">Quản lý hồ sơ ứng tuyển</div>
+        <div id="side_left_application_management_candidate">
+            <div type="button" id="btn_all_application_management_candidate">Tất cả</div>
+            <div type="button" id="btn_pending_application_management_candidate">Đang chờ duyệt</div>
+            <div type="button" id="btn_selected_application_management_candidate">Đã được chọn</div>
+            <div type="button" id="btn_not_suitable_application_management_candidate">Không phù hợp</div>
 
-                </div>
-                <div id="side_main_application_management_candidate">
-                    <div id="number_application_management_candidate">1 <div style="display: inline-block;">đơn ứng
-                            tuyển</div>
-                    </div>
+        </div>
+        <div id="side_main_application_management_candidate">
+            <div id="number_application_management_candidate">
+                1
+                <div style="display: inline-block;">đơn ứng tuyển</div>
+            </div>
 
-                    <div class="d-flex flex-wrap card_application_management_candidate">
-                        <div class="item_application_management_candidate p-2 m-2">
-                            <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_card_application">
-                            <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
-                            <div class="name_company_home_candidate">VNG Games</div>
-                            <img src="/css/style/image/ic_time.svg" alt="ic_time" class="ic_time_card_application">
-                            <div class="text_time_submit_record">Ngày nộp hồ sơ: 12-12-2022 22:35 PM</div>
-                            <div class="text_status_application">Đang chờ duyệt</div>
-
-                        </div>
-                        <div class="item_application_management_candidate p-2 m-2">
-                            <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_card_application">
-                            <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
-                            <div class="name_company_home_candidate">VNG Games</div>
-                            <img src="/css/style/image/ic_time.svg" alt="ic_time" class="ic_time_card_application">
-                            <div class="text_time_submit_record">Ngày nộp hồ sơ: 12-12-2022 22:35 PM</div>
-                            <div class="text_status_application">Đang chờ duyệt</div>
-
-                        </div>
-                    </div>
-                    <nav aria-label="Page navigation example" id="nav_page_application_management_candidate">
-                        <ul class="pagination">
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                    <span class="sr-only">Next</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-
-
+            <div class="d-flex flex-wrap card_application_management_candidate" id="cv_items">
 
             </div>
+
+            <nav aria-label="Page navigation example" id="nav_page_application_management_candidate">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
+    </div>
+</div>
+
+<script>
+    const _list_cvs = {{{ data.list_cvs }}}
+
+    function view_list_cvs(with_status) {
+        $("#cv_items").html("")
+
+        let _count_cvs = 0
+        for (let i = 0; i < _list_cvs.length; i++) {
+            let _date = new Date(_list_cvs[i].submit_date._seconds * 1000);
+            let _submit_date = _date.getDate() + "/" + (_date.getMonth() + 1) + "/" + _date.getFullYear()
+
+            let _status = ""
+            if (_list_cvs[i].status == "pending") {
+                _status = "Đang chờ duyệt"
+            } else if (_list_cvs[i].status == "approved") {
+                _status = "Đã được chấp nhận"
+            } else if (_list_cvs[i].status == "denied") {
+                _status = "Đã bị từ chối"
+            } else { }
+            if (_list_cvs[i].status == with_status || with_status == "all") {
+                $("#cv_items").append(`
+                    <div class="item_application_management_candidate p-2 m-2">
+                        <img src="${_list_cvs[i].avatar_employer}" alt="logo" class="logo_company_card_application">
+                        <div class="title_recuit_company_home_candidate">${_list_cvs[i].title_recruitment}</div>
+                        <div class="name_company_home_candidate">${_list_cvs[i].name_employer}</div>
+                        <img src="/css/style/image/ic_time.svg" alt="ic_time" class="ic_time_card_application">
+                        <div class="text_time_submit_record">Ngày nộp hồ sơ: ${_submit_date}</div>
+                        <div class="text_status_application">${_status}</div>
+                        <div class="view_detail" id="${_list_cvs[i].id_cv}">Xem chi tiết</div>
+                    </div>
+                `)
+                _count_cvs += 1
+            }
+        }
+        $("#number_application_management_candidate").html(`${_count_cvs} đơn ứng tuyển`)
+    }
+
+    view_list_cvs("all")
+
+    $("#btn_all_application_management_candidate").click(function () {
+        view_list_cvs("all")
+
+        $(".is_selected").toggleClass("is_selected").toggleClass("not_selected")
+        $(this).addClass("is_selected").removeClass("not_selected")
+    })
+
+    $("#btn_pending_application_management_candidate").click(function () {
+        view_list_cvs("pending")
+
+        $(".is_selected").toggleClass("is_selected").toggleClass("not_selected")
+        $(this).addClass("is_selected").removeClass("not_selected")
+    })
+
+    $("#btn_selected_application_management_candidate").click(function () {
+        view_list_cvs("approved")
+
+        $(".is_selected").toggleClass("is_selected").toggleClass("not_selected")
+        $(this).addClass("is_selected").removeClass("not_selected")
+    })
+
+    $("#btn_not_suitable_application_management_candidate").click(function () {
+        view_list_cvs("denied")
+
+        $(".is_selected").toggleClass("is_selected").toggleClass("not_selected")
+        $(this).addClass("is_selected").removeClass("not_selected")
+    })
+
+    $(".view_detail").click(function () {
+        $(location).attr("href", "/candidate/detail_cv?id_cv=" + $(this).attr("id"))
+    })
+</script>
+
+<style>
+    .is_selected {
+        color: #00B4D8 !important;
+    }
+
+    .not_selected {
+        color: black !important;
+    }
+
+    .view_detail {
+        position: absolute;
+        line-height: 52px;
+        right: 26px;
+        top: 152px;
+        font-family: 'Poppins', sans-serif;
+        font-style: italic;
+        font-size: 18px;
+        color: gray;
+        cursor: pointer;
+    }
+</style>
