--- a/src/server_employer/Source/views/contents/sign_up.hbs
+++ b/src/server_employer/Source/views/contents/sign_up.hbs
@@ -80,7 +80,7 @@
 
             $.each(items, function (i, item) {
                 $('#select_province_signin_recruit').append($('<option>', {
-                    value: item.name,
+                    value: item.code + "|||" + item.name,
                     text: item.name,
                     code: item.code,
                     class: 'op_select_province'
