change status cv

--- a/src/server_employer/Source/views/contents/detail_cv_candidate.hbs
+++ b/src/server_employer/Source/views/contents/detail_cv_candidate.hbs
@@ -10,8 +10,8 @@
             <div id="date_submit_profile_candidate_recruit">Ngày nộp hồ sơ: 22/01/2022</div>
             <form id="button_change_status" method="POST" action="/employer/post_detail_cv_candidate">
                 <input type="hidden" id="id_of_cv" name="id_cv" value="" />
-                <input type="submit" id="btn_accept_candidate" name="status_cv" value="Chấp nhận" />
-                <input type="submit" id="btn_reject_candidate" name="status_cv" value="Từ chối" />
+                <input type="submit" id="btn_accept_candidate" name="approved_cv" value="Chấp nhận" />
+                <input type="submit" id="btn_reject_candidate" name="denied_cv" value="Từ chối" />
             </form>
         </div>
         <div id="info_profile_candidate_recruit">
