view profile employer

--- a/src/server_employer/Source/views/contents/manage_candidates_cvs.hbs
+++ b/src/server_employer/Source/views/contents/manage_candidates_cvs.hbs
@@ -61,7 +61,7 @@
                 <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">${_list_cvs[i].name}</td>
                 <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">${_list_cvs[i].email}</td>
                 <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">${_list_cvs[i].phone}</td>
-                <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">${_list_cvs[i].introduce}aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+                <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">${_list_cvs[i].introduce}</td>
                 <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">${_status}</td>
             </tr>
         `)
