--- a/src/server_employer/Source/views/partials/header_employer_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_login.hbs
@@ -15,7 +15,7 @@
             <img src="{{data.user.avatar}}" id="avatar_recruit" alt="avatar_recruit">
         </button>
         <div class="dropdown-menu" id="dropdown_menu_recruit" aria-labelledby="menu_account_recruit">
-            <a class="dropdown-item" id="setting_account_recruit" href="#">Cài đặt tài khoản
+            <a class="dropdown-item" id="setting_account_recruit" href="/employer/profile">Trang cá nhân
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
