--- a/src/server_admin/Source/views/partials/menu.hbs
+++ b/src/server_admin/Source/views/partials/menu.hbs
@@ -6,8 +6,9 @@
         <img src="/css/style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit"
             alt="ic_manage_recruit_home_recruit">
     </a>
-    <a id="menu_manage_report_home_admin" href="#">Quản lý báo cáo tin tuyển dụng
-        <img src="/css/style/image/ic_report.svg" id="ic_manage_record_home_recruit" alt="ic_manage_record_home_recruit">
+    <a id="menu_manage_report_home_admin" href="/admin/manage_reports">Quản lý báo cáo tin tuyển dụng
+        <img src="/css/style/image/ic_report.svg" id="ic_manage_record_home_recruit"
+            alt="ic_manage_record_home_recruit">
     </a>
     <div id="line"></div>
     <div id="text_version">©️2022 JORE. All rights reversed.</div>
