them chuc nang doi mat khau check verify dang ky employer

--- a/src/server_employer/Source/views/contents/sign_in.hbs
+++ b/src/server_employer/Source/views/contents/sign_in.hbs
@@ -36,7 +36,7 @@
         <div id="text_No_Account">Bạn chưa có tài khoản?
             <a id="signin_now" href="/auth/sign_up">Đăng ký ngay</a>
         </div>
-        <a href="/employer/forgot_pw" id="forget_password">Quên mật khẩu</a>
+        <a href="/auth/forgot_pw" id="forget_password">Quên mật khẩu</a>
     </div>
     <div id="rectangle_image_login">
         <img src="/css/style/image/side_login.svg" id="side_login" alt="login">
