--- a/src/server_employer/Source/views/layouts/main_employer_not_login.hbs
+++ b/src/server_employer/Source/views/layouts/main_employer_not_login.hbs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon"
+        href="https://firebasestorage.googleapis.com/v0/b/jobhiringweb.appspot.com/o/logo%2Flogo-business.png?alt=media&token=5fbb55cd-ffa3-46d2-b9ef-49fdaeacb723">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style/css/css.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
