--- a/src/server_employer/Source/views/contents/reset_pw.hbs
+++ b/src/server_employer/Source/views/contents/reset_pw.hbs
@@ -1,24 +1,26 @@
-<div id="rectangle_mid_reset_password">
-    <div id="rectangle_form_reset_password">
-        <div id="text_reset_password">Đặt lại mật khẩu của bạn</div>
-        <form action="">
-            <div id="label_new_password">Mật khẩu mới</div>
-            <input type="text" name="new_password_employer" id="new_password" required placeholder="Nhập mật khẩu mới">
-            <img src="/css/style/image/logo_password.svg" id="logo_password_reset_password_1"
-                alt="logo_password_reset_password">
-            <img src="/css/style/image/eye-slash.svg" id="eye_slash_new_password_1" alt="eye_slash_new_password_1">
+ <div id="rectangle_mid_reset_password">
+            <div id="rectangle_form_reset_password">
+                <div id="text_reset_password">Đặt lại mật khẩu của bạn</div>
+                <form method="post" action="/auth/reset_password"  class="needs-validation"
+            oninput='confirm_new_password.setCustomValidity(confirm_new_password.value != new_password.value ? "Mật khẩu nhập lại không đúng !" : "")'>
 
-            <div id="label_confirm_new_password">Xác nhận mật khẩu</div>
-            <input type="text" name="confirm_new_password_employer" id="confirm_new_password" required
-                placeholder="Nhập lại mật khẩu">
-            <img src="/css/style/image/logo_password.svg" id="logo_password_reset_password_2"
-                alt="logo_password_reset_password">
-            <img src="/css/style/image/eye-slash.svg" id="eye_slash_new_password_2" alt="eye_slash_new_password_2">
+                    <input type="hidden" name="token" value="{{token}}">
+                    <input type="hidden" name="email" value="{{email}}">
 
-            <button type="submit" id="submit_new_password">Thay đổi mật khẩu</button>
-        </form>
-    </div>
-    <div id="rectangle_image_reset_password">
-        <img src="/css/style/image/side_reset_password.svg" id="side_reset_password" alt="side_reset_password">
-    </div>
-</div>
+                    <div id="label_new_password">Mật khẩu mới</div>
+                    <input type="password" name="new_password" id="new_password"  required placeholder="Nhập mật khẩu mới">
+                    <img src="/css/style/image/logo_password.svg" id="logo_password_reset_password_1" alt="logo_password_reset_password">
+                    {{!-- <img src="/css/style/image/eye-slash.svg" id="eye_slash_new_password_1" alt="eye_slash_new_password_1"> --}}
+
+                    <div id="label_confirm_new_password">Xác nhận mật khẩu</div>
+                    <input type="password" name="confirm_new_password" id="confirm_new_password"  required placeholder="Nhập lại mật khẩu">
+                    <img src="/css/style/image/logo_password.svg" id="logo_password_reset_password_2" alt="logo_password_reset_password">
+                    {{!-- <img src="/css/style/image/eye-slash.svg" id="eye_slash_new_password_2" alt="eye_slash_new_password_2"> --}}
+
+                    <button type="submit" id="submit_new_password">Thay đổi mật khẩu</button>
+            </div>
+            <div id="rectangle_image_reset_password">
+                <img src="/css/style/image/side_reset_password.svg" id="side_reset_password" alt="side_reset_password">
+
+            </div>
+        </div>
