them giao dien edit profile employer

--- a/src/server_employer/Source/views/contents/profile.hbs
+++ b/src/server_employer/Source/views/contents/profile.hbs
@@ -8,7 +8,8 @@
             <div id="name_candidate_recruit">{{{ data.user.office }}}</div>
             <div id="status_profile_candidate_recruit">SĐT: {{{ data.user.phone }}}</div>
             <div id="date_submit_profile_candidate_recruit">Email: {{{ data.user.email }}}</div>
-            <a id="btn_accept_candidate" href="/employer/edit_profile">Chỉnh sửa</a>
+            <a id="btn_accept_candidate"  href="/employer/edit_profile_employer">Chỉnh
+                sửa</a>
         </div>
 
         <div id="info_profile_company_recruit">
